--- a/src/scss/plugins/plugins.scss
+++ b/src/scss/plugins/plugins.scss
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 @import './toastr.scss';
+@import './tailwindcss.scss';
+@import './fullpage.scss';
