Added Js Plugins

--- a/src/scss/0_variables.scss
+++ b/src/scss/0_variables.scss
@@ -83,3 +83,16 @@ $retina: '(min--moz-device-pixel-ratio: 1.5),
 //     @warn 'Invalid breakpoint: #{$breakpoint}.';
 //   }
 // }
+
+
+.p-ab{
+  position: absolute;
+}
+
+.p-re{
+  position: relative;
+}
+
+.b-0{
+  bottom: 0;
+}
