--- a/src/scss/2_header.scss
+++ b/src/scss/2_header.scss
@@ -77,8 +77,8 @@
 
   .hero{
     display: flex;
+    height: calc(100vh - 100px);
     .hero-section-1{
-      height: 80vh;
       width: 50vw;
 
       .welcome{
@@ -97,10 +97,11 @@
       display: flex;
       flex-direction: column;
 
+      .layer2{
+        width: 330px;
+      }
         .table-image{
-          @include media(1336px, null){
-            margin-top: 108px;
-          }
+          margin-top: 250px;
         }
     }
   }
@@ -119,7 +120,9 @@
 
 }
 
-
+img{
+  max-width: 100%;
+}
 .polymorph {
   fill: #398f5a;
   width: 250px;
