--- a/src/scss/3_body.scss
+++ b/src/scss/3_body.scss
@@ -1,7 +1,7 @@
 
 
 .intro{
-  background: #f5f5f5;
+  background: #363636;
 
   .intro-wrapper{
     display: flex;
@@ -9,7 +9,7 @@
     align-items: center;
     align-content: center;
     .intro-card{
-      background-color: #fff;
+      background: -webkit-linear-gradient(left bottom, #272f56, #888cf0);
     display: grid;
     flex-direction: column;
     text-align: center;
@@ -22,6 +22,13 @@
       border-radius: 3px;
     &:hover {
       box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
+
+    .header-img{
+      svg{
+        width: 60px;
+        margin: auto;
+      }
     }
     }
   }
