--- a/src/scss/2_header.scss
+++ b/src/scss/2_header.scss
@@ -15,13 +15,19 @@
 
   // background-image: linear-gradient(to top, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
 
-  background-image: linear-gradient(to right, #434343 0%, black 100%);
-  background-size: cover;
+  // background-image: linear-gradient(to right, #434343 0%, black 100%);
+  // background-size: cover;
 
-  background-position: bottom;
-  object-fit: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
+  // background-position: bottom;
+  // object-fit: cover;
+  // background-repeat: no-repeat;
+
+
+  background-color: #0b0a0b;
+    background-image:
+    url(
+      "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 3…3 3 0 0 0 0 6zm16-16a3 3 0 1 0 0-6 3 3 0 0 0 0 6z'%3E%3C/path%3E%3C/svg%3E");
+    height: 100vh;
 
   .navbar {
     width: 100%;
@@ -114,9 +120,11 @@
 
 // }
 
-.intro__header {
+.intro__header, .showcase__header {
   display: flex;
-  align-items: flex-end;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 25px;
 
 }
 
