added work showcase

--- a/src/scss/0_variables.scss
+++ b/src/scss/0_variables.scss
@@ -17,14 +17,13 @@ $raleway: 'Raleway', sans-serif;
 :root{
   --primary-color: #0984e3;
   --secondary-color: #b2bec3;
-  --bgc: #28293D ;
-  --card-bg: #fff;
+  --bgc: #10111C ;
+  --card-bg: #28293D;
   --text-color: #fff;
   --font-color: #424242;
   --bg-color: #fff;
   --heading-color: #292922;
   --raleway: 'Raleway', sans-serif;
-
 }
 
 
