--- a/src/scss/3_body.scss
+++ b/src/scss/3_body.scss
@@ -1,76 +1,78 @@
-body{
+body {
   font-family: var(--raleway);
   background-color: var(--bgc);
-
+}
+* {
+  scroll-behavior: smooth;
 }
 
-.intro{
+.header--title {
+  font-size: 28px;
+  color: var(--text-color);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--raleway);
+}
+.intro {
   background: var(--bgc);
   font-family: var(--raleway);
   height: 100vh;
-
-  &__header{
-    .header--title{
-      font-size: 28px;
-      color: var(--text-color);
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: var(--raleway);
-    }
+  padding:50px;
+  &__header {
   }
-  &__card-wrapper{
+  &__card-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     align-content: center;
     margin-top: 50px;
     color: var(--text-color);
-    .intro-card{
+    .intro-card {
       // background: -webkit-linear-gradient(left bottom, #272f56, #888cf0);
-    display: grid;
-    flex-direction: column;
-    text-align: center;
-    grid-gap: 10px;
-    margin-top: 10px;
-    max-width: 230px;
-    background-color: var(--card-bg);
-    margin: 10px;
-    padding: 10px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    border-radius: 3px;
-    min-height: 230px;
+      display: grid;
+      flex-direction: column;
+      text-align: center;
+      grid-gap: 10px;
+      margin-top: 10px;
+      max-width: 230px;
+      background-color: var(--card-bg);
+      margin: 10px;
+      padding: 10px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+      border-radius: 3px;
+      min-height: 230px;
       &:hover {
-      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-      transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+        transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+      }
 
-    }
-
-    .header-img{
+      .header-img {
         display: flex;
         justify-content: center;
         align-items: center;
-      svg{
-        width: 60px;
-        margin: auto;
+        svg {
+          width: 60px;
+          margin: auto;
+        }
       }
-    }
     }
   }
 }
 
-.showcase{
+.showcase {
   // background-color: var(--bgc);
+  padding: 50px;
+  height: 100vh;
 }
 
-.showcase__wrapper{
+.showcase__wrapper {
   display: grid;
   grid-template-columns: auto auto auto;
   grid-gap: 10px 40px;
   justify-content: center;
-
   .sc-child {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     max-width: 260px;
@@ -81,91 +83,118 @@ body{
     border-radius: 6px;
     position: relative;
     overflow: hidden;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     &:hover .child-header img {
-        transform: scale(1.1);
-        transition: all .3s ease-in-out;
+      transform: scale(1.1);
+      transition: all 0.3s ease-in-out;
     }
-    &:hover::after{
+    &:hover::after {
       display: block;
-      transition: all .3s ease-in-out;
+      transition: all 0.3s ease-in-out;
       opacity: 1;
-
     }
-    &:hover .child-body{
-      display: block;
+    &:hover .child-body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
       opacity: 1;
-      transition: all .3s ease-in-out;
-
+      transition: all 0.3s ease-in-out;
+      .view-more {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        font-size: 13px;
+        padding: 3px 10px;
+        border: 1px solid rgba(225, 225, 225, 0.5);
+        box-sizing: border-box;
+        border-radius: 3px;
+        position: relative;
+        bottom: 0;
+        margin-top: 10px;
+        cursor: pointer;
+        &:hover {
+          background-color: var(--bgc);
+          border: 1px solid var(--primary-color);
+          opacity: 1;
+          transition: all ease-in-out 0.3s;
+          color: var(--primary-color);
+        }
+        & > a {
+          padding: 3px 10px;
+        }
+      }
     }
-    &::after{
-      content: '';
+
+    &::after {
+      content: "";
       width: 100%;
       height: 160px;
-      background-color: #1C1C2880;
+      background-color: rgba(0, 0, 0, 0.5);
+      // background-color: #1C1C2880;
       position: absolute;
       top: 0;
-      transition: all .3s ease-in-out;
+      transition: all 0.3s ease-in-out;
       opacity: 0;
       display: none;
     }
-
-}
-.child-header{
-  width: 100%;
-  height: 100%;
-}
-.child-header img {
-  max-width: 100%;
-  width: 100%;
-  height: 100%;
-  transition: all ease-in-out .2s;
-  &:hover{
-    transform: scale(1.1);
-   }
-}
-.child-body {
+  }
+  .child-header {
+    width: 100%;
+    height: 100%;
+  }
+  .child-header img {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    transition: all ease-in-out 0.2s;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+  .child-body {
     font-size: 22px;
     padding: 10px 10px 0px 5px;
     position: absolute;
     top: 0;
     z-index: 22;
     display: none;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     opacity: 0;
-    .body-title{
+    .body-title {
       padding: 0 5px;
       color: #fff;
       font-size: 16px;
-      transition: all .3s ease-in-out;
-
+      transition: all 0.3s ease-in-out;
     }
-}
+  }
 }
 
 .icon-list {
-    /* width: 360px; */
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto;
-    /* height: 250px; */
-    justify-content: center;
-    align-items: center;
-    margin: 40px auto -70px auto;
+  /* width: 360px; */
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto;
+  /* height: 250px; */
+  justify-content: center;
+  align-items: center;
+  margin: 40px auto -70px auto;
 }
 
 .icon-list svg {
-    width: 40px;
-    padding: 3px;
-    margin: 0 10px;
+  width: 40px;
+  padding: 3px;
+  margin: 0 10px;
+  color: var(--text-color);
+  opacity: 0.9;
+  transition: 0.3s ease-in-out;
+
+  &:hover {
     color: var(--text-color);
-    opacity: .9;
-    transition: .3s ease-in-out;
-
-
-    &:hover{
-      color: var(--text-color);
-      opacity: 1;
-      transition: .3s ease-in-out;
-      transform: scale(1.11);
-    }
+    opacity: 1;
+    transition: 0.3s ease-in-out;
+    transform: scale(1.11);
+  }
 }
